# novel-writer

./: ARCHITECTURE.md  CHANGELOG.md  CHAPTER_MANAGEMENT_SUMMARY.md  Cargo.toml  DEVELOPER_GUIDE.md  NOVEL_LIST_VIEW_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  USER_GUIDE.md  功能说明.md  灵感模块使用示例.md
assets/: styles.css
data/: novels.db-shm  novels.db-wal
src/: config.rs  init.rs  lib.rs  main.rs
src/assets/: styles.css
src/core/: app_state.rs  chapter_manager.rs  formatter.rs  inspiration_manager.rs  mod.rs  novel_manager.rs  stats_manager.rs  version_manager.rs
src/db/: migrations.rs  mod.rs  models.rs  schema.sql
src/examples/: inspiration_example.rs
src/ui/: app.rs  connection_manager.rs  mod.rs
src/ui/components/: chapter_form.rs  chapter_list.rs  chapter_management.rs  editor.rs  header.rs  inspiration_list.rs  inspiration_management.rs  inspiration_stats.rs  mod.rs  novel_detail.rs  novel_form.rs  novel_management.rs  settings_view.rs  sidebar.rs  stats_view.rs  status_bar.rs  toolbar.rs
src/ui/layouts/: mod.rs
src/utils/: diff_utils.rs  mod.rs
