[package]
name = "novel-writer"
version = "0.1.0"
edition = "2021"
description = "A professional novel writing tool built with Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/novel-writer"
readme = "README.md"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
similar = "2.7.0"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.17"
lazy_static = "1.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
web-sys = { version = "0.3.81", features = ["Window"] }
log = "0.4.22"
env_logger = "0.11.5"

[package.metadata.dioxus]
application-name = "Novel Writer"
default-theme = "light"
